--- a/SelfUI/SelfUI/Info.plist
+++ b/SelfUI/SelfUI/Info.plist
@@ -9,6 +9,7 @@
 		<string>Barlow-Medium.ttf</string>
 		<string>Barlow-Italic.ttf</string>
 		<string>Barlow-Light.ttf</string>
+		<string>SF-Pro.ttf</string>
 	</array>
 </dict>
 </plist>
